--- a/PSMT.tex
+++ b/PSMT.tex
@@ -9,24 +9,30 @@
 \begin{document}
 
 \maketitle
+\setcounter{tocdepth}{1}
 \tableofcontents
 
 
-\section{Assumptions and observations}
-    \subsection{Assumptions}
-    
-    Dam is not tidal, no flow in from rivers, no water is released either; the
-    water level will not change.
 
-    Bacteria will not begin to compete for food source etc, meaning that their
-    growth will continue its upwards trend; the only limiting factor in the
-    lake's bacteria population is the lake's size.
+\section{Introduction}
+The task outlined is to predict at what time a population of bacteria will
+completely cover the surface of a lake. In order to do this, the area of the
+lake must first be calculated from the diagram provided.
+
+\section{Assumptions and observations}
 
     \subsection{Observations}
 
-    dam passes vertical line test, meaning it can be modelled as as function
+    When the diagram of the dam is oriented with the straight wall downwards, the rest of the outline passes the vertical line test, meaning that it can be modelled with some sort of mathematical function.
+    
+    \subsection{Assumptions}
+    
+    In order to simplify the problem, certain assumptions must be made either due to a lack of information provided or to bring the scope of the problem to a reasonable scale.
 
+    Should the water level of the dam change, this would change the water's surface area, since it is unlikely the walls of the dam are perfectly vertical. Changing the surface area of the dam would in turn affect the point at which the bacteria would cover the entire lake, affecting the result of the investigation. Since no data is provided on the water level, it is reasonable to assume that it is static, and will not have any effect on the surface area of of the lake.
 
+    In a similar vein, there are many factors which can influence the growth rate of a population of bacteria, including access to a food source, temperature and competition for space. Similarly to the dam's water level, no data is provided around this, meaning that it must be assumed that the none of these factors will affect the bacteria as the population grows.
+    
 \section{Translation of mathematical procedures}
 
 
