fix compile failure from previous commit

--- a/PSMT.tex
+++ b/PSMT.tex
@@ -17,10 +17,14 @@
 
 
 \section{Introduction}
-    The given task is to predict the time period after which a population of bacteria will completely cover the surface of a lake (Figure \ref{figDamOutline}. In order to do this, the area of the lake must first be calculated from the diagram provided. Once this area is known, the growth of the bacteria can then be projected and the point at which the lake will be covered subsequently found.
+    The given task is to predict the time period after which a population of bacteria will completely cover the surface of a lake (Figure \ref{figDamOutline}). In order to do this, the area of the lake must first be calculated from the diagram provided. Once this area is known, the growth of the bacteria can then be projected and the point at which the lake will be covered subsequently found.
 
     \begin{figure}
         \centering
+        \includegraphics[width = 12cm]{dam cropped}
+        \caption{Diagram of outline of dam}
+        \label{figDamOutline}
+    \end{figure}
 
 
 
