commit to test workflow

--- a/PSMT.tex
+++ b/PSMT.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 
+% commit to test workflows
+
 \usepackage{pgfplots}
     \pgfplotsset{compat=1.17}
 \usepackage{graphicx}
